tests/NormalTests/paczka1/fuzzy1/25897212.err
Error in line 2: dCo7O S175 69,3
Error in line 1: phVvnYNGKjK S175 82,1
Error in line 6: ikFH A74 78,8
Error in line 13: S175 A255 61,6
Error in line 25: mSKCGt A255 66,3
